# pg-widget

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pg_widgets/: ColorPicker.py  ControlManager.py  FreeDraw.py  Tab.py  TextBoxes.py  TuningSliders.py  __init__.py  utils.py
src/pg_widgets/basics/: Border.py  Plot.py  Primitives.py  ProgressBar.py  Slider.py  TextBox.py  ToggleButton.py  UIElement.py  UIGroup.py  __init__.py
src/pg_widgets/utils/: Lowpass.py  __init__.py
tests/: completeSuite.py  tabs.py
